changed highlight colour to firebrick red

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -169,6 +169,16 @@ img {
 }
 
 /**
+ * Highlight colour
+ */
+ 
+ ::selection {
+  background: firebrick;
+  color: white;
+}
+
+
+/**
  * BLOCK app
  *
  * A block containing the ENTIRE application.
