fixing fonts on About page

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1570,3 +1570,12 @@ textarea {
   line-height: 135%;
   font-size: 105%;
 }
+
+
+/*********************************ABOUT PAGE*************************************/
+
+.about-page{
+  font-size: 105%;
+  line-height: 130%;
+
+}
