fixing fonts on Contact Us page

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1579,3 +1579,9 @@ textarea {
   line-height: 130%;
 
 }
+
+/**********************************CONTACT US PAGE*******************************/
+.contact-us-page{
+  font-size: 105%;
+  line-height: 135%;
+}
