--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1051,6 +1051,7 @@ a.menu-choice__label:active {
 .book-icon-button{
   background-color: transparent !important;
   border: none !important;
+  color: red;
 }
 
 .elaboration__row {
