--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1393,7 +1393,36 @@ textarea {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
+.preverb-breakdown {
+  padding: 0;
+  list-style: none;
+  font-size: var(--preverb-breakdown-size);
+}
+.preverb-breakdown__tooltip-icon {
+  display: inline;
+  position: relative;
+}
+.preverb-breakdown__preverb-definition {
+  margin: 0;
+}
 
+.preverb-breakdown__preverb-definition-text {
+  white-space: pre-line;
+}
+
+.preverb-breakdown__tooltip-icon > img {
+  width: var(--tooltip-icon-size);
+
+  /* vertically center the question mark*/
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  /* end vertical centering */
+
+  left: 0.2em;  /* space out the question mark */
+  filter: var(--blue-filter); /* blue color */
+}
 /* Partner logos
    ========================================================================== */
 .sshrc-crsh-logo {
